# NLRC_Parallel_Runtimes

./: .gitignore  ReadMe.md
Part_1/: CMakeLists.txt  ReadMe.md
Part_1/tests/: CMakeLists.txt  main.cpp
Part_1/workspace/include/: counter.hpp
Part_1/workspace/source/: counter.cpp
Part_2/: CMakeLists.txt  ReadMe.md
Part_2/tests/: CMakeLists.txt  main.cpp
Part_2/workspace/include/: counter.hpp
